--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 title: "Chadd's MSSA Blog"
 author: "Chaddrick K. Winston"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "My name is Chadd Winston and this blog is about my experience with Microsoft's Software and Systems Academy." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
-twitter_username: "twitteruser"
-github_username: "githubuser"
-linkedin_username: "linkedinuser"
+email: "chaddrick.winston@outlook.com"
+#twitter_username: "twitteruser"
+github_username: "ckwinst"
+linkedin_username: "chadd-winston"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
